# mixed-GEMMul8

./: README.md
GEMMul8/: CMakeLists.txt
GEMMul8/include/: gemmul8.hpp
GEMMul8/src/: common.hpp  gemmul8.cu  gpu_arch.hpp  inverse_scaling.hpp  mat_utils.hpp  scaling.hpp
GEMMul8/testing/: CMakeLists.txt  eval.hpp  getWatt.hpp  gpu_arch.hpp  make_matrix.hpp  one_accuracy.cu  one_accuracy_complex.cu  profile_one_call.cu  test_double.cu  test_float.cu  test_float_complex.cu  test_mixed.cu  test_mixed_double.cu  test_mixed_float.cu
GEMMul8/testing/generate_fig/: plot_accuracy.m  plot_flops.m  plot_timebreakdown.m  plot_watt.m
